Fixed truncate.

--- a/NationalParksProject/client/src/style/Recommendations.css
+++ b/NationalParksProject/client/src/style/Recommendations.css
@@ -14,9 +14,9 @@
 }
 
 .headers .header, 
-.park_code, .park_name, .state, .acres, .latitude, .longitude,
+.park_name, .state, .acres, .latitude, .longitude,
 .trail_name, .popularity, .length, .elevation, .score,
-.scientific_name, .common_names, .order_name, .family {
+.scientific_name, .common_names, .order_name, .family, .num_species {
   flex: 1 0 16%;
 }
 
